--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <url>https://github.com/IMSGlobal/basiclti-util-java</url>
     <groupId>org.imsglobal</groupId>
     <artifactId>basiclti-util</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     <organization>
         <name>IMS Global Learning Consortium</name>
         <url>www.imsglobal.org/</url>
@@ -54,14 +54,14 @@
             </plugin>
         </plugins>
     </reporting>
-
+<!--
     <scm>
         <connection>scm:git:git@github.com:IMSGlobal/basiclti-util-java.git</connection>
         <developerConnection>scm:git:git@github.com:IMSGlobal/basiclti-util-java.git</developerConnection>
         <url>git@github.com:IMSGlobal/basiclti-util-java.git</url>
       <tag>HEAD</tag>
   </scm>
-
+-->
     <properties>
         <powermock.version>1.5.5</powermock.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -84,17 +84,17 @@
             <artifactId>json-simple</artifactId>
             <version>1.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.3</version>
-            <type>jar</type>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.codehaus.jackson</groupId> -->
+<!--             <artifactId>jackson-mapper-asl</artifactId> -->
+<!--             <version>1.9.3</version> -->
+<!--         </dependency> -->
+<!--         <dependency> -->
+<!--             <groupId>org.codehaus.jackson</groupId> -->
+<!--             <artifactId>jackson-core-asl</artifactId> -->
+<!--             <version>1.9.3</version> -->
+<!--             <type>jar</type> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>net.oauth.core</groupId>
             <artifactId>oauth-provider</artifactId>
@@ -115,20 +115,30 @@
             <artifactId>signpost-commonshttp4</artifactId>
             <version>1.2.1.2</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.4.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.4.1</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.fasterxml.jackson.core</groupId> -->
+<!--             <artifactId>jackson-core</artifactId> -->
+<!--             <version>2.4.1</version> -->
+<!--         </dependency> -->
+<!--         <dependency> -->
+<!--             <groupId>com.fasterxml.jackson.core</groupId> -->
+<!--             <artifactId>jackson-annotations</artifactId> -->
+<!--             <version>2.4.1</version> -->
+<!--         </dependency> -->
+<!--         <dependency> -->
+<!--             <groupId>com.fasterxml.jackson.core</groupId> -->
+<!--             <artifactId>jackson-databind</artifactId> -->
+<!--             <version>2.4.1</version> -->
+<!--         </dependency> -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.5.2</version>
+		</dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.4.1</version>
+            <version>2.5.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -200,6 +210,7 @@
                     </execution>
                 </executions>
             </plugin>
+			<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -213,6 +224,7 @@
                     </execution>
                 </executions>
             </plugin>
+			-->
         </plugins>
     </build>
 
